# chingari_assignment

./: Cargo.toml  README.md
src/: args.rs  client.rs  error.rs  helper.rs  main.rs
