[package]
name = "chingari_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.7"
solana-sdk = "1.14.7"
solana-transaction-status = "1.14.7"
chrono = "0.4.23"
tokio = "1.21.2"
clap = { version = "4.0.23", features = ["derive"] }
thiserror = "1.0.37"